# SI_assignments

./: .gitignore
01_Data_Files/: me.json  me.xml
01a/: parsing.js  parsing.py  script.xml
02._Data/: main.py  parsing.py  script.csv  script.txt  script.yml
03a/: app.js  package.json  pyproject.toml
03b/: documentation.md
03b/Integrator_Alpay/: Feedback.txt
03b/database/: DockerFile  database_hms.sql
04a/: main.py  pyproject.toml
04a/public/: index.html
04b/: documentation.md
05a/: documentation.md  endpoint_data.json  handler.py  main.py  pyproject.toml
05a/templates/: index.html
06a/: main.py  pyproject.toml
06a/templates/: index.html
08a/: hms_mro_docs.html
08a/models/: Account.js  Appointment.js  AppointmentAudit.js  Clinic.js  Department.js  Doctor.js  Hospital.js  Journal.js  Patient.js  Persondatum.js  Prescription.js  Rating.js
08b/: alembic.ini  pyproject.toml  seed_db.py
08b/alembic/versions/: 66a53a8dc499_create_students_table.py
08c/: README.md  client_secret.json  main.py  pyproject.toml
09a/: code_documentation.txt
10a/: main.py  pyproject.toml
10a/database/: book_crud.py  data.py
10a/resolvers/: mutations.py  queries.py
10b/: main.py  pyproject.toml  stripe_integration.py
10b/static/: index.html
